<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
 
    <include layout="@layout/layout_title"/>
	<LinearLayout
		android:id="@+id/wholeTrackLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="20dp"
		android:paddingBottom="10dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="5dp"
			android:text="@string/whole_track_data" />

		<CheckBox
			android:id="@+id/wholeTrack1CBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/track1" />

		<CheckBox
			android:id="@+id/wholeTrack2CBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/track2" />

		<CheckBox
			android:id="@+id/wholeTrack3CBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/track3"  />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="10dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="5dp"
			android:textSize="11sp"
			android:text="@string/card_type_support" />

		<CheckBox
			android:id="@+id/insertCBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:checked="true"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/card_ic" />

		<CheckBox
			android:id="@+id/passCBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:checked="true"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/card_rf" />

		<CheckBox
			android:id="@+id/swipeCBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:checked="true"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/card_mag"  />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="10dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<CheckBox
			android:id="@+id/allRFCardCBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:checked="false"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/rf_card_all_types" />

		<CheckBox
			android:id="@+id/loopSearchRFCard"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:checked="false"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/loop_search_rf_card" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="10dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<CheckBox
			android:visibility="gone"
			android:id="@+id/emvProcessOptimizationCBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:checked="false"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="emv非接快速流程" />

	</LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:orientation="horizontal">
 
        <Button 
            android:id="@+id/startBtn"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:onClick="startTrade"
			android:text="Start Trade"
			style="@style/NormalBtn"/>

		<Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:onClick="stopTrade"
			android:text="Stop Trade"
			style="@style/NormalBtn"/>
	  
    </LinearLayout>

    <include layout="@layout/layout_message"/>
</LinearLayout>
