<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <include layout="@layout/layout_title"/>

    <LinearLayout
        style="@style/RadioLinearlayout">
        <TextView
            style="@style/RadioTitle"
            android:text="@string/pinpad_type" />

        <RadioGroup
            android:id="@+id/pinpadRadioGroup"
            style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/innerPinpadRadio"
                android:text="@string/inner"
                android:checked="true"
                style="@style/RadioBtn" />

            <RadioButton
                android:id="@+id/extPinpadRadio"
                android:text="@string/external"
                style="@style/RadioBtn"  />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        style="@style/RadioLinearlayout">
        <TextView
            style="@style/RadioTitle"
            android:text="@string/rfreader_type" />

        <RadioGroup
            android:id="@+id/rfreaderRadioGroup"
            style="@style/RadioGroup">
            <RadioButton
                android:id="@+id/innerRfreaderRadio"
                android:text="@string/inner"
                android:checked="true"
                style="@style/RadioBtn" />
            <RadioButton
                android:id="@+id/extRfreaderRadio"
                android:text="@string/external"
                style="@style/RadioBtn"  />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/kapId" />

        <EditText
            android:id="@+id/etRegisionId"
            style="@style/NormalEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5"
            android:hint="regisionId"  />
        <EditText
            android:id="@+id/etKapNum"
            style="@style/NormalEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5"
            android:hint="kapNum" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:text="@string/common_log_switch" />
        <Switch
            android:id="@+id/logSwitch"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:switchMinWidth="40dp"
            android:thumb="@android:color/transparent"
            android:track="@drawable/selector_switch"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="save"
            android:text="@string/save"
            style="@style/NormalBtn"/>
    </LinearLayout>

</LinearLayout>
