<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
 
    <include layout="@layout/layout_title"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="20dp"
		android:paddingBottom="10dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="5dp"
			android:text="@string/whole_track_data" />

		<CheckBox
			android:id="@+id/wholeTrack1CBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/track1" />

		<CheckBox
			android:id="@+id/wholeTrack2CBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/track2" />

		<CheckBox
			android:id="@+id/wholeTrack3CBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/track3"  />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="10dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="5dp"
			android:text="@string/track_enabled" />

		<CheckBox
			android:id="@+id/track1CBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/track1" />

		<CheckBox
			android:id="@+id/track2CBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/track2" />

		<CheckBox
			android:id="@+id/track3CBox"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:button="@null"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/selector_checkbox"
			android:drawablePadding="5dp"
			android:textSize="11sp"
			android:text="@string/track3"  />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/trackTypeLayout"
		android:visibility="gone"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/track_type" />

		<org.angmarch.views.NiceSpinner
			android:id="@+id/trackTypeSpinner"
			android:layout_margin="5dp"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="40dp"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:imeOptions="actionNext"
			android:layout_height="wrap_content"
			android:text="@string/retain_ctrl_char" />
		<Switch
			android:id="@+id/ctrlCharSwitch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:layout_marginLeft="20dp"
			android:checked="false"
			android:textOff=""
			android:textOn=""
			android:switchMinWidth="40dp"
			android:thumb="@android:color/transparent"
			android:track="@drawable/selector_switch"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:imeOptions="actionNext"
			android:layout_height="wrap_content"
			android:text="@string/check_track_state" />
		<Switch
			android:id="@+id/checkStateSwitch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:layout_marginLeft="20dp"
			android:checked="true"
			android:textOff=""
			android:textOn=""
			android:switchMinWidth="40dp"
			android:thumb="@android:color/transparent"
			android:track="@drawable/selector_switch"
			/>
	</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <Button 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:onClick="searchCard"
	        android:text="searchCard"
            style="@style/NormalBtn"/>
	      
	    <Button 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:onClick="stopSearch"
	        android:text="stopSearch"
            style="@style/NormalBtn"/>
    
    </LinearLayout>

    <include layout="@layout/layout_message"/>
</LinearLayout>
